# slack-drive-search

./: .env.example  Makefile  README.md  main.py  pyproject.toml
app/: slackbot.py
